broken imgs edited

--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
                 <div class="inner-header">
                     <div class="main-logo">
                         <a href="index-2.html">
-                            <img class="dark-logo" src="http://ad-block.net/images/icons/logo.png" alt="" />
+                            <img class="dark-logo" src="assets/img/logo.png" alt="" />
                             <img class="light-logo" src="assets/img/logo.png" alt="" />
                         </a>
                     </div>
@@ -99,7 +99,7 @@
             <div class="header-container">
                 <div class="logo main-logo">
                     <a href="index-2.html">
-                        <img class="dark-logo" src="http://ad-block.net/images/icons/logo.png" alt="" />
+                        <img class="dark-logo" src="assets/img/logo.png" alt="" />
                         <img class="light-logo" src="assets/img/logo.png" alt="" />
                     </a>
                 </div>
@@ -191,7 +191,7 @@
                                 <div class="col-md-3 dsn-col-footer">
                                     <div class="footer-block">
                                         <div class="footer-logo">
-                                            <a href="#"><img src="http://ad-block.net/images/icons/logo.png" alt=""></a>
+                                            <a href="#"><img src="assets/img/logo.png" alt=""></a>
                                         </div>
     
                                         <div class="footer-social">
