--- a/order.html
+++ b/order.html
@@ -186,7 +186,7 @@
                       <div class="col-md-3 dsn-col-footer">
                           <div class="footer-block">
                               <div class="footer-logo">
-                                  <a href="#"><img src="http://ad-block.net/images/icons/logo.png" alt=""></a>
+                                  <a href="#"><img src="assets/img/logo.png" alt=""></a>
                               </div>
 
                               <div class="footer-social">
