--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="extend-container">
                 <div class="inner-header">
                     <div class="main-logo">
-                        <a href="index-2.html">
+                        <a href="index.html">
                             <img class="dark-logo" src="assets/img/logo.png" alt="" />
                             <img class="light-logo" src="assets/img/logo.png" alt="" />
                         </a>
