--- a/order.html
+++ b/order.html
@@ -47,27 +47,27 @@
   <div class="dsn-nav-bar">
     <div class="site-header">
       <div class="extend-container">
-        <div class="inner-header">
-          <div class="main-logo">
-            <a href="index-2.html">
-              <img class="dark-logo" src="assets/img/logo-dark.png" alt="" />
-              <img class="light-logo" src="assets/img/logo.png" alt="" />
-            </a>
+          <div class="inner-header">
+              <div class="main-logo">
+                  <a href="index.html">
+                      <img class="dark-logo" src="assets/img/logo.png" alt="" />
+                      <img class="light-logo" src="assets/img/logo.png" alt="" />
+                  </a>
+              </div>
           </div>
-        </div>
-        <nav class=" accent-menu main-navigation">
-          <ul class="extend-container">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">contact</a></li>
-            <li><a href="order.html">Request Oreder</a></li>
-        </ul>
-        </nav>
+          <nav class=" accent-menu main-navigation">
+              <ul class="extend-container">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="contact.html">contact</a></li>
+                  <li><a href="order.html">Request Oreder</a></li>
+              </ul>
+          </nav>
       </div>
-    </div>
+  </div>
     <div class="header-top header-top-hamburger">
       <div class="header-container">
         <div class="logo main-logo">
-          <a href="index-2.html">
+          <a href="index.html">
             <img class="dark-logo" src="assets/img/logo-dark.png" alt="" />
             <img class="light-logo" src="assets/img/logo.png" alt="" />
           </a>
