--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
             <div class="extend-container">
                 <div class="inner-header">
                     <div class="main-logo">
-                        <a href="index-2.html">
+                        <a href="index.html">
                             <img class="dark-logo" src="assets/img/logo.png" alt="" />
                             <img class="light-logo" src="assets/img/logo.png" alt="" />
                         </a>
@@ -57,40 +57,9 @@
                 </div>
                 <nav class=" accent-menu main-navigation">
                     <ul class="extend-container">
-                        <li class="custom-drop-down">
-                            <a href="#">Home</a>
-                            <ul>
-                                <li><a href="index-2.html">Main Demo</a></li>
-                                <li><a href="one-page-3.html">One Page Three</a></li>
-                                <li><a href="one-page-4.html">One Page Four</a></li>
-                            </ul>
-                        </li>
-                        <li class="custom-drop-down">
-                            <a href="#">Slider</a>
-                            <ul>
-                                <li><a href="slider.html">Slider</a></li>
-                                <li><a href="slider2.html">Slider two</a></li>
-                                <li><a href="slider3.html">Slider Three</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="about.html">About</a></li>
-                        <li class="custom-drop-down">
-                            <a href="#">Work</a>
-                            <ul>
-                                <li><a href="work.html">Work</a></li>
-                                <li><a href="project-9.html">Header One</a></li>
-                                <li><a href="project-7.html">Header Two</a></li>
-                                <li><a href="project-5.html">Header Three</a></li>
-                            </ul>
-                        </li>
-                        <li class="custom-drop-down">
-                            <a href="#">Blog</a>
-                            <ul>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="post.html">Single Post</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="order.html">Request Oreder</a></li>
                     </ul>
                 </nav>
             </div>
