project bug fixed

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                             <img class="has-top-bottom" src="assets/img/project/project3/1.jpg" alt="">
                                             <div class="item-border"></div>
                                             <div class="item-info">
-                                                <a href="project.html?feature=1" data-dsn-grid="move-up" class="effect-ajax">
+                                                <a href="project01.html" data-dsn-grid="move-up" class="effect-ajax">
 
                                                     <!-- <h5 class="cat">Photography</h5> -->
                                                     <h4>Light Weight</h4>
@@ -433,7 +433,7 @@
                                             <img class="has-top-bottom" src="assets/img/project/project6/1.jpg" alt="">
                                             <div class="item-border"></div>
                                             <div class="item-info">
-                                                <a href="project.html?feature=2" data-dsn-grid="move-up" class="effect-ajax">
+                                                <a href="project02.html" data-dsn-grid="move-up" class="effect-ajax">
 
                                                     <!-- <h5 class="cat">Fashion</h5> -->
                                                     <h4>Fire resistence & sound insulation</h4>
@@ -447,7 +447,7 @@
                                             <img class="has-top-bottom" src="assets/img/project/project3/22.jpeg" alt="">
                                             <div class="item-border"></div>
                                             <div class="item-info">
-                                                <a href="project.html?feature=3" data-dsn-grid="move-up" class="effect-ajax">
+                                                <a href="project03.html" data-dsn-grid="move-up" class="effect-ajax">
 
                                                     <!-- <h5 class="cat">Photography</h5> -->
                                                     <h4>Smooth Surface</h4>
@@ -461,7 +461,7 @@
                                             <img class="has-top-bottom" style="width:100%" src="assets/img/project/project5/2.jpg" alt="">
                                             <div class="item-border"></div>
                                             <div class="item-info">
-                                                <a href="project.html?feature=4" data-dsn-grid="move-up" class="effect-ajax">
+                                                <a href="project04.html" data-dsn-grid="move-up" class="effect-ajax">
 
                                                     <!-- <h5 class="cat">Fashion</h5> -->
                                                     <h4>Low Cost</h4>
@@ -474,7 +474,7 @@
                                             <img class="has-top-bottom" src="assets/img/project/project5/1.jpeg" alt="">
                                             <div class="item-border"></div>
                                             <div class="item-info">
-                                                <a href="project.html?feature=5" data-dsn-grid="move-up" class="effect-ajax">
+                                                <a href="project05.html" data-dsn-grid="move-up" class="effect-ajax">
 
                                                     <!-- <h5 class="cat">Fashion</h5> -->
                                                     <h4>Noise cancellation</h4>
