--- a/project05.html
+++ b/project05.html
@@ -67,7 +67,7 @@
         <div class="header-top header-top-hamburger">
             <div class="header-container">
                 <div class="logo main-logo">
-                    <a href="index-2.html">
+                    <a href="index.html">
                         <img class="dark-logo" src="assets/img/logo.png" alt="" />
                         <img class="light-logo" src="assets/img/logo.png" alt="" />
                     </a>
@@ -115,7 +115,7 @@
             <header>
                 <div class="headefr-fexid" data-dsn-header="project">
                     <div class="bg" id="dsn-hero-parallax-img" data-dsn-ajax="img">
-                        <div class="bg-image feature-img cover-bg" data-overlay="3"></div>
+                        <div class="bg-image feature-img cover-bg" style="background-image: url('assets/img/project/project5/1.jpeg');" data-overlay="3"></div>
                     </div>
 
                     <div class="scroll" data-dsn-animate="ajax">
@@ -126,7 +126,7 @@
                         <div class="title-text-header">
                             
                             <span class="title-text-header-inner">
-                                <span data-dsn-animate="ajax" class="feature-title"></span>
+                                <span data-dsn-animate="ajax" class="feature-title">Noise cancellation</span>
                             </span>
                         </div>
                     </div>
@@ -138,11 +138,11 @@
                     <div class="container intro-project section-margin">
                         <div class="intro-text">
                             <div class="title-cover" data-dsn-grid="move-section" data-dsn-opacity="0.1"
-                                data-dsn-duration="170%" data-dsn-move="0%" class="feature-title">
+                                data-dsn-duration="170%" data-dsn-move="0%" class="feature-title">Noise cancellation
                             </div>
                             <div class="inner">
-                                <h2 data-dsn-animate="text" class="feature-title"></h2>
-                                <p data-dsn-animate="up" class="feature-desc"></p>
+                                <h2 data-dsn-animate="text" class="feature-title">Noise cancellation</h2>
+                                <p data-dsn-animate="up" class="feature-desc">AD-Block has excellent performance in absorbing and isolating sounds more than any other structural system because they contain vacuums and water  then it works on sound distortion.</p>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,6 @@
 
 
                 </div>
-
 
                 <footer class="footer">
                     <div class="container">
@@ -182,10 +181,10 @@
                                         <h4 class="footer-title">Navigation</h4>
                                         <nav>
                                             <ul>
-                                                <li><a href="#">Features</a>
+                                                <li><a href="index.html">Home</a>
                                                 </li>
-                                                <li><a href="#">About</a></li>
-                                                <li><a href="#">Contact</a>
+                                                <li><a href="order.html">Order</a></li>
+                                                <li><a href="contact.html">Contact</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -195,10 +194,10 @@
                                 <div class="col-md-3 dsn-col-footer">
                                     <div class="footer-block col-contact">
                                         <h4 class="footer-title">Contact</h4>
-                                        <p><strong>T</strong> <span>:</span> +001 225 3351</p>
-                                        <p><strong>F</strong> <span>:</span>+001 225 3351</p>
+                                        <p><strong>T</strong> <span>:</span> +20 100 727 9209</p>
+                                        <p><strong>F</strong> <span>:</span>+20 100 727 9209</p>
                                         <p class="over-hidden"><strong>E</strong> <span>:</span><a class="link-hover"
-                                                data-hover-text="info@dsngrid.com" href="#">info@dsngrid.com</a>
+                                                data-hover-text="info@ad-block.net" href="#">info@ad-block.net</a>
                                         </p>
                                     </div>
                                 </div>
@@ -207,8 +206,7 @@
                                     <div class="col-address">
                                         <h4 class="footer-title">Address</h4>
     
-                                        <p>Waslet Dahshur Rd, Sheikh Zayed City, Giza Governorate<br>
-                                            Egypt</p>
+                                        <p>Waslet Dahshur Rd, Sheikh Zayed City, Giza Governorate</p>
                                     </div>
                                 </div>
                             </div>
