--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
           <div class="inner-header">
               <div class="main-logo">
                   <a href="index.html">
-                      <img class="dark-logo" src="assets/img/logo.png" alt="" />
-                      <img class="light-logo" src="assets/img/logo.png" alt="" />
+                      <img class="dark-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
+                      <img class="light-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
                   </a>
               </div>
           </div>
@@ -69,7 +69,7 @@
         <div class="logo main-logo">
           <a href="index.html">
             <img class="dark-logo" src="assets/img/logo-dark.png" alt="" />
-            <img class="light-logo" src="assets/img/logo.png" alt="" />
+            <img class="light-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
           </a>
         </div>
 
@@ -208,7 +208,7 @@
                       <div class="col-md-3 dsn-col-footer">
                           <div class="footer-block">
                               <div class="footer-logo">
-                                  <a href="#"><img src="assets/img/logo.png" alt=""></a>
+                                  <a href="#"><img src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt=""></a>
                               </div>
 
                               <div class="footer-social">
