--- a/project04.html
+++ b/project04.html
@@ -50,8 +50,8 @@
                 <div class="inner-header">
                     <div class="main-logo">
                         <a href="index.html">
-                            <img class="dark-logo" src="assets/img/logo.png" alt="" />
-                            <img class="light-logo" src="assets/img/logo.png" alt="" />
+                            <img class="dark-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
+                            <img class="light-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
                         </a>
                     </div>
                 </div>
@@ -68,8 +68,8 @@
             <div class="header-container">
                 <div class="logo main-logo">
                     <a href="index.html">
-                        <img class="dark-logo" src="assets/img/logo.png" alt="" />
-                        <img class="light-logo" src="assets/img/logo.png" alt="" />
+                        <img class="dark-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
+                        <img class="light-logo" src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt="" />
                     </a>
                 </div>
 
@@ -159,7 +159,7 @@
                                 <div class="col-md-3 dsn-col-footer">
                                     <div class="footer-block">
                                         <div class="footer-logo">
-                                            <a href="#"><img src="assets/img/logo.png" alt=""></a>
+                                            <a href="#"><img src="https://static.exploremelon.com/gulf/logos/AD-Home.png" alt=""></a>
                                         </div>
     
                                         <div class="footer-social">
