--- a/order.html
+++ b/order.html
@@ -131,7 +131,7 @@
                 <span>Saudi Arabia</span>
                 <span>4055 King Fahd Rd
                   Riyadh</span>
-                <span> +966 560 043 253 </span>
+                <span> +966 596 598 011 </span>
               </address>
             </div>
 
@@ -261,7 +261,7 @@
                     <div class="footer-block col-contact">
                       <h4 class="footer-title">Contact</h4>
                       <p><strong>T</strong> <span>:</span>
-                        +966 560 043 253</p>
+                        +966 596 598 011</p>
                       <p class="over-hidden"><strong>E</strong>
                         <span>:</span><a class="link-hover"
                           data-hover-text="info@hamatalkhalij.com"
@@ -283,6 +283,11 @@
                 <img src="assets//img/2030.png"
                   class="sa-img" />
                 <img src="assets//img/madeinsa.png"
+                  class="sa-img" style="max-width: 200px;" />
+                <img src="assets//img/tvtc-4.png"
+                  class="sa-img" style="max-width: 200px;" />
+                <img
+                  src="assets//img/l1.jpg"
                   class="sa-img" />
               </div>
               <div class="copyright">
